# 3_muslims_bot

./: .breakpoints  Keep_alive.py  ayat.py  fillin_aya.py  main.py  pyproject.toml
